--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <a href="index.html">Home</a> |
-        <a href="Formulario.html">Formulário 1</a> |
-        <a href="">Formulário 2</a> |        
+        <a href="formulario.html">Formulário 1</a> |
+        <a href="formulario2.html">Formulário 2</a> |        
     </nav>
 
     <h1> Disciplina: Padrões Web</h1>
